<resources>
    <string name="app_name">Park Zone</string>
    <string name="mail">Email ID</string>
    <string name="already">Already have an account ?</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="forgot">Enter the email associated with your account.</string>
    <string name="forgot_button">Get Reset Link</string>
    <string name="news1"><u><b>Honk More, Wait More:</b> \nHow Mumbai Police Is \nPunishing Reckless \nHonkers</u></string>
    <string name="news2"><u>From Today, Pay Up \n To Rs 23,000 For \nIllegal Parking \nIn Mumbai</u></string>
    <string name="news3"><u>Mumbai Most Traffic \nCongested City In \nThe World,Delhi \nAt Fourth</u></string>
    <string name="news4"><u>Read More</u></string>
    <string name="api_key">AIzaSyAGIsVpEc2y_Zd26a60l5vfeyxsXYpjk88</string>
    <string name="TnC">This transaction cannot be cancelled\n as per Parking Policy</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="end_parking">End Parking</string>


    <string-array name="number">
        <item>6</item>
        <item>12</item>
        <item>18</item>
        <item>24</item>
        <item>30</item>
        <item>36</item>
        <item>42</item>
        <item>48</item>
        <item>54</item>
        <item>60</item>
    </string-array>
    <string-array name="area">
        <item>Andheri</item>
        <item>Ville Parle</item>
        <item>Central Mall Nashik</item>
        <item>Bandra</item>
        <item>D N Nagar</item>
        <item>Jogeshwari</item>
        <item>Goregaon</item>
        <item>Saki Naka</item>
        <item>Khar Road</item>
        <item>Mithibai College</item>
    </string-array>

    <string-array name="userArea">
        <item>Please select an area to Park</item>
        <item>Andheri</item>
        <item>Ville Parle</item>
        <item>Central Mall Nashik</item>
        <item>Bandra</item>
        <item>D N Nagar</item>
        <item>Jogeshwari</item>
        <item>Goregaon</item>
        <item>Saki Naka</item>
        <item>Khar Road</item>
        <item>Mithibai College</item>
    </string-array>
    <string name="ques1">What payment options are enabled?</string>
    <string name="ans1">We tried to focus on Digital india and
        have tried to implement Online transaction portals like
        Gpay, Paypal and UPI payments. But for those who don\'t have an active
        digital transaction, we have also provided an option to pay at Counter itself.</string>


    <string name="ques2">How will my car stay safe?</string>
    <string name="ans2">We have tried to get in contact with only those
        parking owner who are trustworthy and have good security protocol
        to keep the parking car safe.</string>

    <string name="ques3">Can I contact the admin for further details if I would like do?</string>
    <string name="ans3">Due to privacy reasons to keep data confidential
    we are not sharing the contact details about the admin.
    But still if you want to contact please submit your query in feedback section and
    we will definitely get back to you as soon as possible.</string>

    <string name="ques4">How many vehicles can i sign up and/or park in the area?</string>
    <string name="ans4">For now you can only register one vehicle at a time for one sign up.
        In case you want to book a parking lot for an event or function; let us know in feedback section!
        We will get in touch with you as soon as possible and arrange your event.</string>

</resources>
