<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/Black">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/darkmode_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            />
        <!--Mail ID-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            app:errorEnabled="true"
            android:background="@drawable/roundbutton"
            android:backgroundTint="@color/White"
            android:id="@+id/mail_id"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="285dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/White"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:textColor="@color/Black" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mail_id"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            app:errorEnabled="true"
            android:background="@drawable/roundbutton"
            android:backgroundTint="@color/White"
            android:id="@+id/password"
            app:passwordToggleEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="285dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:hint="Password"
                android:paddingStart="10dp"
                android:paddingBottom="10dp"
                android:inputType="textPassword"
                android:textColor="@color/Black"
                android:backgroundTint="@color/White"/>
        </com.google.android.material.textfield.TextInputLayout>
<!--        Forgot Password-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot Password"
            android:textColor="#ff3366"
            android:layout_below="@id/submit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:textSize="14sp"
            android:id="@+id/forgot"/>
        <!--Login Button-->
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="Login"
            android:id="@+id/submit"
            android:textSize="18sp"
            android:background="@drawable/roundbutton"
            android:backgroundTint="#FF3366"
            android:textColor="@color/White"
            />
        <Button
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:padding="20dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/forgot_button"
            android:id="@+id/forgot_submit"
            android:textSize="18sp"
            android:background="@drawable/roundbutton"
            android:backgroundTint="#FF3366"
            android:textColor="@color/White"
            />
        <TextView
            android:id="@+id/forgot_text"
            android:visibility="gone"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:text="@string/forgot"
            android:textColor="#ff3366"
            android:layout_centerHorizontal="true"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/submit"
            android:layout_marginTop="50dp"
            android:text="Don't have an account ?"
            android:textSize="16sp"
            android:textColor="#ff3366"
            android:layout_centerHorizontal="true"
            android:padding="5dp"
            android:id="@+id/non_existing"
            />
        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgot_submit"
            android:layout_marginTop="50dp"
            android:text="Go Back to login page"
            android:textSize="16sp"
            android:textColor="#ff3366"
            android:layout_centerHorizontal="true"
            android:padding="5dp"
            android:id="@+id/go_back"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            android:id="@+id/back"
            />
    </RelativeLayout>
</ScrollView>